# volume-setter

./: .clang-format  CMakeLists.txt  LICENSE  README.md  app.manifest  example-profiles.toml  main.cpp  svc.manifest  vcpkg.json
include/declvol/: config.h  exception.h  mi.h  process.h  profile.h  volume.h  windows.h
protos/declvol/v1/: declvol.proto
src/declvol/: config.cpp  exception.cpp  executable.cpp  mi.cpp  process.cpp  profile.cpp  service.cpp  volume.cpp  windows.cpp
src/declvol/v1/: declvol.grpc.pb.cc  declvol.grpc.pb.h  declvol.pb.cc  declvol.pb.h
tools/: build_protos.sh
